fixed div overflow problem

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,6 @@ h1, h2 {
 }
 
 .boxen {
-    overflow: scroll;
     text-align: center;
     justify-content: center;
     margin: 5px;
@@ -25,13 +24,15 @@ h1, h2 {
 .generatedText {
     font-size: 48px;
     color: black;
-    height: 140px;
+    min-height: 90px;
     align-items: center;
 }
 
 p {
     display: inline-flex;
     padding-right: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .button {
